<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"></TextView>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/first_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:id="@+id/tv_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/last_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:id="@+id/tv_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/email_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:inputType="textCapSentences"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/_6sdp">

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/terms_condition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_6sdp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_bg"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/white"></TextView>

                <TextView
                    android:id="@+id/tv_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_bg"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:text="@string/delete_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/white"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>