<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"></TextView>

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"></TextView>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_6sdp">

                    <TextView
                        android:id="@+id/tv_terms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/update_details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/first_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.8"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/darker_gray"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/last_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.8"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/darker_gray"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.8"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/darker_gray"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/email_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.8"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/darker_gray"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/location"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.8"
                        android:inputType="textCapSentences"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@android:color/darker_gray"></EditText>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
