<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_bg"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/choose_language"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/img_en_radio"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/radio_off"></ImageView>


            <TextView
                android:id="@+id/tv_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center|left"
                android:text="@string/english"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@android:color/black"
                android:textStyle="bold"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/img_fr_radio"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/radio_off"></ImageView>


            <TextView
                android:id="@+id/tv_fr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center|left"
                android:text="@string/french"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@android:color/black"
                android:textStyle="bold"></TextView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>