<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_above="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame"></FrameLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layout_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/img_home"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_settings"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/img_settings"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/img_profile"
                app:tint="@android:color/white"></ImageView>

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@android:color/white"></TextView>

        </LinearLayout>

    </LinearLayout>

<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>-->
</RelativeLayout>